2017-02-01  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.4-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.4-beta01 final changes';git push
	git tag -a 4.6.4-beta01 -m 'Version 4.6.4-beta01 new features: ncclimo stdin option, redirection, blues batch, calendar bugfix';git push --tags

	* Calendar code is MUCH slower on MacOS than Linux, unclear why

	* Henry made sscanf() in custom calendar routines be more fault-tolerant, fixes MacOS aborts

2017-01-27  Charlie Zender  <zender@uci.edu>

	* ncclimo improve shell pattern match for $HOSTNAME for blues and cooley

	* ncclimo detect input redirection in interactive mode, and add	--stdin for batch mode

2017-01-26  Charlie Zender  <zender@uci.edu>

	* Learned that MacOS aborts due to custom calendar (e.g., 365_day) handling

2017-01-25  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.4-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.4-alpha06 final changes';git push
	git tag -a 4.6.4-alpha06 -m 'Version 4.6.4-alpha06 new features: cell_measures, clm_md=dly, stdin PBS/SLURM';git push --tags

	* Unable to reproduce MacOS behavior that leads to unexpected aborts with some time hyperslabs

	* Update bld/Makefile for new ncap2_att.cc

	* Conclusively demonstrated that testing [ -p /dev/stdin ] leads to unexpected results on PBS not SLURM

2017-01-23  Charlie Zender  <zender@uci.edu>

	* Henry eliminated an invalid read in nco_cln_prs_tm() that contributed to ncclimo hyperslab failures on MacOS

2017-01-22  Charlie Zender  <zender@uci.edu>

	* ncclimo omit gaa_sng from regrid commands, since gaa_sng is in files to regrid

	* ncclimo daily mode fix parallelization

	* ncclimo implement daily climatology. commands look good. date hyperslab fails on MacOS.

	* ncclimo allow clm_md='dly' to read input from stdin, positional, or directory glob

	* ncsplit fix directory glob for split-mode

2017-01-20  Charlie Zender  <zender@uci.edu>

	* Implement stubs for clm_md='dly'
